# keepsake

./: .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bash.sh  keepsake.code-workspace  replicate.code-workspace  requirements-test.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: report-an-issue.md
.github/workflows/: benchmark.yaml  ci.yaml  cli-ci.yaml  end-to-end-test.yaml  python-ci.yaml  release.yaml
base-image-builder/: Makefile  README.md  go.mod  go.sum
cli/: Makefile  README.md  go.mod  go.sum  tools.go
cli/benchmark/: list_test.go
cli/benchmark/graph/: README.md  pyproject.toml
cli/make/: validate
cli/raw-assets/: Dockerfile  (+2 more)
end-to-end-test/: Makefile  README.md  conftest.py  pytest.ini  requirements.txt
example/: README.md  example.py  replicate.yaml  requirements.txt  train.py
go/: Makefile  README.md  go.mod  go.sum  tools.go
makefile-scripts/: verify-go-version.sh  verify-python-version.sh
nodeps-test/: Makefile  test_nodeps.py
proto/: Makefile  keepsake.proto  replicate.proto  service.proto
python/: .gitignore  .mypy.ini  Makefile  README.md  build_shared.py  example.py  keepsake.yaml  pyproject.toml  pytest.ini  replicate.yaml  requirements-test.txt  setup.py  test.py  tox.ini
test-end2end/: README.md  conftest.py  pytest.ini  requirements.txt  test_checkout.py  test_delete.py  test_gpu.py  test_list.py
tools/: make_benchmark_projects.py  make_complex_project.py
web/: .env  .prettierignore  README.md  docusaurus.config.js  next.config.js  package.json  sidebars.js
(+348 files in other folders)
