[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Ben Firshman <ben@firshman.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
sklearn = "^0.0"
scikit-learn = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
